[package]
name = "migrations_internals"
version = "1.4.1"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Internal implementation of diesels migration mechanism"
homepage = "https://diesel.rs"

[dependencies]
barrel = { path = "../../../barrel", optional = true, features = ["diesel"] }

[dependencies.diesel]
version = "~1.4.0"
path = "../../diesel"
default-features = false

[dev-dependencies]
tempfile = "3.0.0"

[features]
default = []
